--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>lightrate | Welcome to lightrate</title>
 </head>
-<body>
-    <h2><span style="color: lightgreen;">lightrate</span> : the next level rating tool</h2>
+<body style="text-align: center">
+    <div style="filter: drop-shadow(1px 1px 1px rgb(60,60,60));">
+        <h2><span style="color: lightgreen;">lightrate</span> : the next level rating tool</h2>
+        <hr>
+    </div>
 </body>
 </html>
