--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -23,10 +23,10 @@
                 <h2><span style="color: lightgreen;">lightrate</span> : the next level rating tool</h2>
                 <hr>
             </div>
-            <div style="width: 600px; height: 400px;">
-                <h3 th:text="${title}"></h3>
+            <div style="width: 600px; height: 400px; margin: auto; border: 1px solid lightgray; border-radius: 5px;">
+                <h1 th:text="${title}"></h1>
                 <hr>
-                <div th:text="${description}"></div>
+                <h2 th:text="${description}"></h2>
             </div>
 
         </body>
