--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -24,9 +24,9 @@
                 <hr>
             </div>
             <div style="width: 600px; height: 400px; margin: auto; border: 1px solid lightgray; border-radius: 5px;">
-                <h1 th:text="${title}"></h1>
+                <h1 th:text="${rating.getTitle().getContent()}"></h1>
                 <hr>
-                <h2 th:text="${description}"></h2>
+                <h2 th:text="${rating.getDescription().getContent()}"></h2>
             </div>
 
         </body>
