--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -33,7 +33,11 @@ box-shadow: 1px 0px 20px -5px rgba(0,0,0,0.75);">
             <h1 th:text="${rating.getTitle().getContent()}"></h1>
             <div th:text="'created on ' + ${rating.getDateOfCreation().toLocalDate()}"></div>
             <hr>
-            <h2 th:text="${rating.getDescription().getContent()}"></h2>
+            <h4 th:text="${rating.getDescription().getContent()}"></h4>
+            <form action="#" method="post" th:action="'/' + ${rating.getRatingID().getId().toString()}">
+                <input type="submit" value="submit">
+            </form>
+            <h4 th:text="${rating.getCount()} + ' user(s) have rated.'"></h4>
         </div>
 
         </body>
