--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -5,6 +5,7 @@
         <html lang="en">
         <head>
             <meta charset="UTF-8">
+            <link rel="stylesheet" th:href="@{/styles/style.css}"/>
             <title th:text="${title}"></title>
         </head>
         <style>
@@ -35,6 +36,12 @@ box-shadow: 1px 0px 20px -5px rgba(0,0,0,0.75);">
             <hr>
             <h4 th:text="${rating.getDescription().getContent()}"></h4>
             <form action="#" method="post" th:action="'/' + ${rating.getRatingID().getId().toString()}">
+                <input id="star1" name="star" type="radio" value="1">
+                <input id="star2" name="star" type="radio" value="2">
+                <input id="star3" name="star" type="radio" value="3">
+                <input id="star4" name="star" type="radio" value="4">
+                <input id="star5" name="star" type="radio" value="5">
+
                 <input type="submit" value="submit">
             </form>
             <h4 th:text="${rating.getCount()} + ' user(s) have rated.'"></h4>
