--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -5,3 +5,8 @@ input[type="radio"] {
 input[type="radio"]:checked {
     background-image: url(full.jpg);
 }
+
+.input-hidden {
+    position: absolute;
+    left: -9999px;
+}
