--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -66,12 +66,17 @@ box-shadow: 1px 0px 20px -5px rgba(0,0,0,0.75);">
             /*[+
 
             const stars = document.querySelectorAll(".star");
-            const rating = [[${rating.getRatingAsInt()}]];
+            let rating = [[${rating.getRatingAsInt()}]];
             const ratingId = [[${rating.getRatingID().getId().toString()}]];
 
             +]*/
         </script>
         <script>
+            rating = 4;
+            for (let i = 1; i <= rating; i++) {
+                stars[i - 1].src = "styles/full.jpg";
+            }
+
             function rate(value) {
                 document.location.href = ratingId + "/" + value;
             }
