--- a/src/main/resources/templates/rating.html
+++ b/src/main/resources/templates/rating.html
@@ -35,14 +35,15 @@ box-shadow: 1px 0px 20px -5px rgba(0,0,0,0.75);">
             <div th:text="'created on ' + ${rating.getDateOfCreation().toLocalDate()}"></div>
             <hr>
             <h4 th:text="${rating.getDescription().getContent()}"></h4>
-            <!--<form action="#" method="post" th:action="'/' + ${rating.getRatingID().getId().toString()}">-->
-            <img class="img1 star" onclick="rate(1)" src="styles/empty.jpg">
-            <img class="img2 star" onclick="rate(2)" src="styles/empty.jpg">
-            <img class="img3 star" onclick="rate(3)" src="styles/empty.jpg">
-            <img class="img4 star" onclick="rate(4)" src="styles/empty.jpg">
-            <img class="img5 star" onclick="rate(5)" src="styles/empty.jpg">
-            <h4 style="color: #ee6f57">Click on one of the stars to leave your rating</h4>
-            <h4 th:text="${rating.getCount()} + ' user(s) have rated.'"></h4>
+            <form action="#" method="post" th:action="'/' + ${rating.getRatingID().getId().toString()}">
+                <img class="img1 star" onclick="rate(1)" src="styles/empty.jpg">
+                <img class="img2 star" onclick="rate(2)" src="styles/empty.jpg">
+                <img class="img3 star" onclick="rate(3)" src="styles/empty.jpg">
+                <img class="img4 star" onclick="rate(4)" src="styles/empty.jpg">
+                <img class="img5 star" onclick="rate(5)" src="styles/empty.jpg">
+                <h4 style="color: #ee6f57">Click on one of the stars to leave your rating</h4>
+                <h4 th:text="${rating.getCount()} + ' user(s) have rated.'"></h4>
+            </form>
         </div>
 
         </body>
@@ -62,7 +63,7 @@ box-shadow: 1px 0px 20px -5px rgba(0,0,0,0.75);">
             }
 
             function rate(value) {
-                document.location.href = ratingId + "/" + value;
+                document.location.href = ratingId + "/rate/" + value;
             }
         </script>
         </html>
