--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     }
 </style>
 <body style="text-align: center; margin: 0px; padding: 0px;">
-    <div style="filter: drop-shadow(1px 1px 1px rgb(60,60,60));">
+    <div>
         <h2><span style="color: lightgreen;">lightrate</span> : the next level rating tool</h2>
         <hr>
     </div>
